[project]
name = "semi-weekly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.128.0",
    "openai>=2.15.0",
    "playwright>=1.57.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.0",
    "uvicorn>=0.40.0",
]
